# nn-c

src/: arrays.h  layer.h  linear.c  linear.h  loss.c  loss.h  mdarray.c  mdarray.h
tests/: CMakeLists.txt  test_linear.c  test_mdarray.c  test_runner.c
